-Aggregated environment variables -Aggregated Enum ErrorApi -Aggregated controller classes for Student, Subject, Professor, Career and Course -ErrorDTO and MapperError were added to display in the HTTP response in case of errors -Changes: -NotDataFound is now ErrorControllerApi, and uses the ENUM ErrorApi - In Service Classes, use the new way of handling errors - Mapper classes have a new method that defines whether a DTO class has its attributes set to null. - Avoid using cascade and orphan data to preserve data integrity. -The Course model is modified to prevent data duplication in foreign keys. -Delete the attribute List<StudentGetDTO> from SubjectGetDTO to display simpler information.