@@ -1,11 +1,10 @@
 package com.example.college.mapper;
 
 import com.example.college.dto.*;
-import com.example.college.model.Career;
-import com.example.college.model.Professor;
 import com.example.college.model.Student;
-
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Mapper for the student entity.
@@ -27,9 +26,13 @@ public class MapperStudent {
 
         if(student == null) return null;
 
-        List<SubjectGetDTO> subjectList= student.getCourses()
-                .stream().map(course -> MapperSubject.toDTO(course.getSubject()))
-                .toList();
+        List<SubjectGetDTO> subjectList = new ArrayList<>();
+
+        if (student.getCourses() != null){
+            subjectList= student.getCourses()
+                    .stream().map(course -> MapperSubject.toDTO(course.getSubject()))
+                    .collect(Collectors.toList());
+        }
 
         return StudentGetDTO.builder()
                 .id(student.getId())
@@ -62,5 +65,25 @@ public class MapperStudent {
                 .gender(studentPostDTO.getGender())
                 .entryDate(studentPostDTO.getEntryDate())
                 .build();
+    }
+
+    /**
+     * Method that assesses whether all attributes of the DTO
+     * are null or all have their respective value.
+     *
+     * @author yfandica
+     *
+     * @param s Object of StudentPostDTO
+     * @return true if it is empty / false if it has all the values
+     */
+    public static boolean isEmpty(StudentPostDTO s){
+
+        if (s.getName()== null && s.getLastName() == null
+                && s.getAge() == null && s.getGender() == null && s.getEntryDate() == null
+                && s.getIdCareer() == null){
+            return true;
+        }
+
+        return false;
     }
 }
